# document_processing

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  requirements-cpu.txt  requirements.txt
scripts/: download_easyocr_weights.py  repair_tables.py
src/docling_offline/: __init__.py  __main__.py  cli.py  config.py  postprocess.py  processor.py  utils.py
tests/: conftest.py  test_config.py  test_gpu.py  test_postprocess.py  test_processor.py  test_utils.py
