[project]
name = "docling-offline"
version = "0.1.0"
description = "Offline-first Docling PDF extraction CLI."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Verdicity Contributors" }
]
dependencies = [
    "docling>=2.0,<3.0",
    "docling-core>=2.0,<3.0",
    "typer[all]>=0.12.5,<0.13",
    "click>=8.0,<8.2",
    "rich>=13.7,<14.0",
    "pyyaml>=6.0,<7.0"
]

[project.scripts]
docling-offline = "docling_offline.cli:app"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
